# focusphere

./: .gitignore  README.md  next.config.ts  package-lock.json  package.json
.next/: app-build-manifest.json  trace
.next/cache/: .rscinfo
.next/server/: app-paths-manifest.json  next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
.next/server/vendor-chunks/: @date-fns.js  @floating-ui.js  @hookform.js  @preact.js  @schedule-x.js  @swc.js  @wojtekmaj.js  appwrite.js  clsx.js  date-fns.js  detect-element-overflow.js  framer-motion.js  get-user-locale.js  make-event-props.js  memoize.js  mimic-function.js  motion-dom.js  motion-utils.js  preact.js  react-clock.js  react-day-picker.js  react-fit.js  react-hook-form.js  react-spinners.js  react-time-picker.js  tabbable.js  temporal-polyfill.js  update-input-width.js  warning.js  zod.js
.next/static/chunks/: app-pages-internals.js  webpack.js
.next/static/webpack/: 28c3e1a34c3de79a.webpack.hot-update.json  webpack.28c3e1a34c3de79a.hot-update.js  (+3 more)
back/: config.py  db.py  deps.py  exception.py  jwt.py  main.py  pyproject.toml  schemas.py
back/models/: __init__.py  userModel.py
back/repository/: __init__.py  base.py  user.py  userRepo.py
back/routes/: __init__.py  auth.py  user.py
back/tests/: test_auth.py  test_user.py
front/: package-lock.json  package.json
public/: ding-sound.webm  lofi.webm  tinymce-content.css
src/app/: globals.scss  layout.tsx  not-found.tsx  page.tsx
src/lib/: appwrite-admin.ts  appwrite.ts
src/shared/: quotes.ts
(+732 files in other folders)
