[project]
name = "Focusphere"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.119.0",
    "loguru>=0.7.3",
    "pydantic-settings>=2.11.0",
    "pydantic[email]>=2.12.0",
    "sqlalchemy>=2.0.44",
    "uvicorn>=0.37.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["D"]
ignore = ["D101", "D102", "D103", "D104", "D105", "D107", "D100"]
pydocstyle.convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
