[project]
name = "Focusphere"
version = "0.1.0"
description = ""
readme = "../README.md"
requires-python = ">=3.13"
dependencies = [
    "aiosqlite>=0.21.0",
    "fastapi>=0.119.0",
    "passlib>=1.7.4",
    "pydantic[email]>=2.12.0",
    "pydantic-settings>=2.11.0",
    "sqlalchemy>=2.0.44",
    "python-jose>=3.5.0",
    "uvicorn[standard]>=0.37.0",
    "loguru>=0.7.3",
    "python-multipart",
    "bcrypt==4.3.0",
]


[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.2",
 "pytest-cov>=7.0.0",
]

[tool.ruff]
line-length = 100
indent-width = 4

[tool.ruff.lint]
select = ["D"]
ignore = ["D101", "D102", "D103", "D104", "D105", "D107", "D100"]
pydocstyle.convention = "google"

[tool.ruff.format]
indent-style = "space"
quote-style = "single"
